infra/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: secureflow-api
spec:
  selector:
    app: secureflow-api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
